   templates are basically inlined into the including template, which can
   speed up rendering of that template a bit.


Version 0.4.4
http://svn.edgewall.org/repos/genshi/tags/0.4.4/
(?, from branches/stable/0.4.x)

 * Fixed augmented assignment to local variables in Python code blocks.
 * Fixed handling of nested function and class definitions in Python code
   blocks.


Version 0.4.3
http://svn.edgewall.org/repos/genshi/tags/0.4.3/
(Jul 17 2007, from branches/stable/0.4.x)

 * The I18n filter no longer extracts or translates literal strings in
   attribute values that also contain expressions.
 * Added `loader_callback` option to plugin interface, which allows specifying
   a callback function that the template loader should invoke whenever a new
   template is loaded (ticket #130). Note that the value for this option can
   not be specified as a string, only as an actual function object, which means
   it is not available for use through configuration files.
 * The I18n filter now extracts messages from gettext functions even inside
   ignored tags (ticket #132).
 * The HTML sanitizer now strips any CSS comments in style attributes, which
   could previously be used to hide malicious property values.
 * The HTML sanitizer now also removes any HTML comments encountered, as those
   may be used to hide malicious payloads targetting a certain "innovative"
   browser that goes and interprets the content of specially prepared comments.
 * Attribute access in template expressions no longer silently ignores
   exceptions other than `AttributeError` raised in the attribute accessor.


Version 0.4.2
http://svn.edgewall.org/repos/genshi/tags/0.4.2/
(Jun 20 2007, from branches/stable/0.4.x)

 * The `doctype` parameter of the markup serializers now also accepts the "name"
   of the doctype as string, in addition to the `(name, pubid, sysid)` tuple.
 * The I18n filter was not replacing the original attributes with the